$Id$

2014-11-30  Christian Franke  <franke@computer.org>

	drivedb.h: USB: Prolific PL2571, PL2771, PL2775 (0x067b:0x2.7.)
	(ticket #499).

2014-11-29  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in, update-smart-drivedb.8.in:
	Add package title to page header.  Move PACKAGE VERSION section to bottom
	of page.  Remove SVN ID section header.

2014-11-29  Tommy Vestermark  <tommy.vestermark@gmail.com>

	scsiata.cpp: Add DATA OUT support for Prolific (ticket #482).
	Add more ATA output registers.  SCT commands are now supported.

2014-11-29  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add strnicmp() compatibility macro for newer Cygwin
	releases.

2014-11-16  Tommy Vestermark  <tommy.vestermark@gmail.com>

	drivedb.h: USB: Prolific PL2773 (0x067b:0x2773) (ticket #482).

2014-11-16  Christian Franke  <franke@computer.org>

	Create branches RELEASE_6_[1-3]_DRIVEDB with last drivedb.h file
	compatible with smartmontools 6.[1-3].

2014-11-10  Tommy Vestermark  <tommy.vestermark@gmail.com>

	scsiata.cpp: Add class usbprolific_device to support Prolific PL2773
	USB bridges (ticket #482).
	smartctl.8.in, smartd.conf.5.in: Document '-d usbprolific'.

2014-11-09  Roger Willcocks  <roger@filmlight.ltd.uk>

	os_linux.cpp: linux_aacraid_device: Fix ioctl data count
	if dxfer_len == 0.  Return scsi sense data.  Together these
	allow the SMART STATUS command to operate correctly.
	Improve SRB status checks.
	linux_ata_device: Fix very old bug in the error handling
	of HDIO_DRIVE_TASKFILE.

2014-10-07  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Added more attributes for SanDisk based SSDs based on SSD
	Dashboard tool data (#463)

2014-10-06  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add form factors from ACS-4.
	Add ACS-2 and ACS-3 minor versions.
	Update SATA log names.  Add SATA 3.2.
	Avoid crash on device statistics page 0xff if SMART READ LOG is used.
	Print vendor specific bytes from SCT Status.