@@ -8,7 +8,7 @@ http://sourceforge.net/p/smartmontools/code/HEAD/tree/trunk/smartmontools/NEWS
 Date <Not released yet, please try current SVN>
 Summary: smartmontools release 6.4
 -----------------------------------------------------------
-- Device type '-d usbprolific' for Prolific PL2773 USB bridges.
+- Device type '-d usbprolific' for Prolific PL2571/277x USB bridges.
 - smartctl '-i': ATA ACS-4 and SATA 3.2 enhancements.
 - smartctl '-l devstat': Read via SMART command if GP log is not
   available.
